--- a/index.html
+++ b/index.html
@@ -1324,6 +1324,7 @@
             </div>
             <div class="footer-bottom">
                 <p>&copy; 2025 NayavaxAI Solutions. All rights reserved. | <a href="#" style="color: inherit;">Privacy Policy</a> | <a href="#" style="color: inherit;">Terms of Service</a></p>
+                <p>H Monish Raj | Bharathi R | Avaneesh S</p>
             </div>
         </div>
     </footer>
